Phase 1: Static layout with HTML5, CSS3, and grid/flexbox

--- a/phase1/index.html
+++ b/phase1/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
 </head>
-
+<body>
 <header class = "top-header">
     <div class="left-buttons">
         <button>STITCH REWARDS</button>
@@ -40,21 +40,11 @@
     <button class="shop-now">Shop Now</button>
   </div>
 </section>
-<section class="product-grid">
-  <div class="product">
-    <img src="./images/glide.png" alt="Glide thread" />
-    <p class="product-title">GLIDE</p>
-  </div>
-  <div class="product">
-    <img src="./images/magneticCore.png" alt="Magnetic core bobbin" />
-    <p class="product-title">MAGNETIC CORE BOBBIN</p>
-  </div>
-  <div class="product">
-    <img src="./images/premiumStabilizer.png" alt="Premium stabilizer" />
-    <p class="product-title">PREMIUM STABILIZER</p>
-  </div>
-</section>
 
+<script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+<script src="js/main.js"></script>
+
+</body>
 
 
 </html>
